--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               class="password"
               name="password"
               placeholder=" "
-              title="Password must have 6 characters, including 1 lowercase letter, 1 uppercase letter and 1 special character"
+              title="Password must have 6 characters, including 1 lowercase letter, 1 uppercase letter and 1 number"
               pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}"
               type="password"
               required
